# Cooperative_Mav_Ugv

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
bagfiles/: imu.csv  imu.txt  mag.txt
include/: LinearAlgebra.cpp~  LinearAlgebra.h~
launch/: boat_world.launch  boat_world.launch~  canopy_world.launch  canopy_world_backup.launch  combined_world.launch  empty_world.launch  empty_world.launch~  export.launch  export.launch~  hardware_UGV.sh  obstacle.launch~  square_world.launch  square_world.launch~  webcam.launch  webcam.launch~  world.launch~
src/: 1_Quadrotor_With_Cam_Hardware.py  1_Quadrotor_With_Cam_Hardware.py~  LinearAlgebra.cpp  LinearAlgebra.h  TBZController.cpp  TBZController.h  ardrone_hardware.cpp  ardrone_hardware.cpp~  ardrone_hardware_full.cpp  ardrone_hardware_full.cpp~  bear.py  bearing_angle_avoidance_hardware.cpp  bearing_angle_avoidance_hardwarefull.cpp  distances.txt  homography_decomp.cpp  homography_decomp.cpp~  mav_path.csv  mav_path2.csv  mav_path3.csv  precomp.hpp~  reader~  sender~  stage.py  stage.py~  subscriber_to_csv.py  subscriber_to_csv.py~  uav.cpp  uav.cpp~  uav.py  uav.py~  uav_combined.cpp  uav_combined.cpp~  uav_homography.cpp  uav_homography.cpp~  uav_room.cpp  uav_room.cpp~  uav_room_hardware.cpp  uav_room_hardware.cpp~  ugv.cpp  ugv.py  (+9 more)
urdf/: black_box.urdf  black_cylinder.urdf  blue_box.urdf  blue_box.urdf~  blue_cylinder.urdf  blue_cylinder.urdf~  green_box.urdf  green_box.urdf~  green_cylinder.urdf  green_cylinder.urdf~  orange_box.urdf  orange_box.urdf~  purple_box.urdf  purple_box.urdf~  purple_cylinder.urdf  purple_cylinder.urdf~  yellow_box.urdf
worlds/: boat_world.world  boat_world.world~  canopy_world.world  canopy_world.world~  canopy_world2.world~  combined_world.world  empty_world.world  empty_world.world~  myrobot.world~  square_world.world  square_world.world~
